--- a/package.json
+++ b/package.json
@@ -21,16 +21,26 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
+    "@awesome-cordova-plugins/bluetooth-classic-serial-port": "^6.4.0",
+    "@awesome-cordova-plugins/bluetooth-serial": "^6.4.0",
+    "@awesome-cordova-plugins/core": "^6.4.0",
     "@capacitor-mlkit/barcode-scanning": "^5.3.0",
     "@capacitor/android": "5.5.1",
     "@capacitor/app": "5.0.6",
     "@capacitor/camera": "^5.0.7",
     "@capacitor/core": "5.5.1",
+    "@capacitor/dialog": "^5.0.6",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
+    "@capacitor/preferences": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
+    "@ionic-native/bluetooth-serial": "^5.36.0",
+    "@ionic-native/core": "^5.36.0",
     "@ionic/angular": "^7.0.0",
     "@ionic/pwa-elements": "^3.2.2",
+    "@mineminemine/esc-pos-encoder-ionic": "^2.0.3",
+    "cordova-plugin-bluetooth-classic-serial-port": "^0.9.13",
+    "cordova-plugin-bluetooth-serial": "^0.4.7",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
