--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/preferences": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
+    "@hugotomazi/capacitor-navigation-bar": "^2.0.1",
     "@ionic-native/bluetooth-serial": "^5.36.0",
     "@ionic-native/core": "^5.36.0",
     "@ionic/angular": "^7.0.0",
