--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/preferences": "^5.0.6",
+    "@capacitor/splash-screen": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@hugotomazi/capacitor-navigation-bar": "^2.0.1",
     "@ionic-native/bluetooth-serial": "^5.36.0",
