initialize app bundle for google

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "SMAR",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "name": "Techbolide SGR",
+  "version": "1.0.0",
+  "author": "Techbolide",
+  "homepage": "https://techbolide.com/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
