--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@ionic/angular": "^7.0.0",
     "@ionic/pwa-elements": "^3.2.2",
     "@mineminemine/esc-pos-encoder-ionic": "^2.0.3",
+    "cordova-custom-config": "5.1.1",
     "cordova-plugin-bluetooth-classic-serial-port": "^0.9.13",
     "cordova-plugin-bluetooth-serial": "^0.4.7",
     "ionicons": "^7.0.0",
