feat(packaging): show seal code as a barcode in module

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cordova-plugin-bluetooth-classic-serial-port": "^0.9.13",
     "cordova-plugin-bluetooth-serial": "^0.4.7",
     "ionicons": "^7.0.0",
+    "jsbarcode": "^3.11.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
