feat(permission): welcome page with check bluetooth permissions

--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
+    "@awesome-cordova-plugins/android-permissions": "^6.7.0",
     "@awesome-cordova-plugins/bluetooth-classic-serial-port": "^6.4.0",
     "@awesome-cordova-plugins/bluetooth-serial": "^6.4.0",
     "@awesome-cordova-plugins/core": "^6.4.0",
+    "@awesome-cordova-plugins/diagnostic": "^6.7.0",
     "@capacitor-mlkit/barcode-scanning": "^5.3.0",
     "@capacitor/android": "5.5.1",
     "@capacitor/app": "5.0.6",
@@ -44,8 +46,10 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "cordova-custom-config": "5.1.1",
+    "cordova-plugin-android-permissions": "^1.1.5",
     "cordova-plugin-bluetooth-classic-serial-port": "^0.9.13",
     "cordova-plugin-bluetooth-serial": "^0.4.7",
+    "cordova.plugins.diagnostic": "^7.1.4",
     "ionicons": "^7.0.0",
     "jsbarcode": "^3.11.6",
     "rxjs": "~7.8.0",
