--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -19,7 +19,8 @@ dependencies {
     implementation project(':capacitor-splash-screen')
     implementation project(':capacitor-status-bar')
     implementation project(':hugotomazi-capacitor-navigation-bar')
-
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
+    implementation "androidx.appcompat:appcompat:1.3.1"
 }
 
 
