chore: automatic build config in settings json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "@ionic/angular/common",
     "@ionic/angular/standalone"
 ],
-"nuxt.isNuxtApp": false
+"nuxt.isNuxtApp": false,
+"java.configuration.updateBuildConfiguration": "automatic"
 }
