chore: prepare drs package

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    namespace "com.techbolide.sgr"
+    namespace "com.techbolide.drs"
     compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
-        applicationId "com.techbolide.sgr"
+        applicationId "com.techbolide.drs"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 10002
+        versionCode 10003
         versionName "1.300"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         aaptOptions {
